2009-12-03  Glenn Morris  <rgm@gnu.org>

	* progmodes/idlwave.el (class): Restore still useful declaration.

2009-12-03  Alan Mackenzie  <acm@muc.de>

Enhance `c-parse-state' to run efficiently in "brace desserts".

	* progmodes/cc-mode.el (c-basic-common-init): Call
	c-state-cache-init.
	(c-neutralize-syntax-in-and-mark-CPP):  Renamed from
	c-extend-and-neutralize-syntax-in-CPP.  Mark each CPP construct by
	placing `category' properties value 'c-cpp-delimiter at its
	boundaries.

	* progmodes/cc-langs.el (c-before-font-lock-function):
	c-extend-and-neutralize-syntax-in-CPP has been renamed
	c-neutralize-syntax-in-and-mark-CPP.

	* progmodes/cc-fonts.el (c-cpp-matchers): Mark template brackets
	with `category' properties now, not `syntax-table' ones.

	* progmodes/cc-engine.el (c-syntactic-end-of-macro): A new
	enhanced (but slower) version of c-end-of-macro that won't land
	inside a literal or on another awkward character.
	(c-state-cache-too-far, c-state-cache-start)
	(c-state-nonlit-pos-interval, c-state-nonlit-pos-cache)
	(c-state-nonlit-pos-cache-limit, c-state-point-min)
	(c-state-point-min-lit-type, c-state-point-min-lit-start)
	(c-state-min-scan-pos, c-state-brace-pair-desert)
	(c-state-old-cpp-beg, c-state-old-cpp-end): New constants and
	buffer local variables.
	(c-state-literal-at, c-state-lit-beg)
	(c-state-cache-non-literal-place, c-state-get-min-scan-pos)
	(c-state-mark-point-min-literal, c-state-cache-top-lparen)
	(c-state-cache-top-paren, c-state-cache-after-top-paren)
	(c-get-cache-scan-pos, c-get-fallback-scan-pos)
	(c-state-balance-parens-backwards, c-parse-state-get-strategy)
	(c-renarrow-state-cache)
	(c-append-lower-brace-pair-to-state-cache)
	(c-state-push-any-brace-pair, c-append-to-state-cache)
	(c-remove-stale-state-cache)
	(c-remove-stale-state-cache-backwards, c-state-cache-init)
	(c-invalidate-state-cache-1, c-parse-state-1)
	(c-invalidate-state-cache): New defuns/defmacros/defsubsts.
	(c-parse-state): Enhanced and refactored.